added tests for POSTing attendes
