# swagger/v1/swagger.yaml
@@ -18,6 +18,16 @@ components:
           type: number
       required:
       - error
+    success_response:
+      type: object
+      properties:
+        status:
+          type: string
+        message:
+          type: string
+      required:
+      - status
+      - message
     registration:
       type: object
       properties:
@@ -59,18 +69,24 @@ components:
       properties:
         user_id:
           type: string
-        event_ids:
-          type: array
-          items:
-            type: string
-            format: EventId
-        comment:
+        competition_id:
           type: string
-        guests:
-          type: number
+        competing:
+          type: object
+          properties:
+            event_ids:
+              type: array
+              items:
+                type: string
+                format: EventId
+            comment:
+              type: string
+            guests:
+              type: number
       required:
       - user_id
-      - event_ids
+      - competition_id
+      - competing
     updateRegistrationBody:
       properties:
         user_id:
@@ -109,7 +125,7 @@ paths:
                 items:
                   "$ref": "#/components/schemas/registration"
         '404':
-          description: Competition ID doesnt exist
+          description: PASSING Competition ID doesnt exist
           content:
             application/json:
               schema:
@@ -146,7 +162,7 @@ paths:
                 type: array
                 items:
                   "$ref": "#/components/schemas/registrationAdmin"
-        '403':
+        '401':
           description: PASSING organizer cannot access registrations for comps they
             arent organizing - multi comp auth
   "/api/v1/register":
@@ -158,8 +174,13 @@ paths:
       responses:
         '202':
           description: PASSING only required fields included
-        '200':
-          description: FAILING empty payload provided
+        '401':
+          description: PASSING user impersonation (no admin permission, JWWT token
+            user_id does not match registration user_id)
+        '403':
+          description: PASSING comp not open
+        '400':
+          description: PASSING empty payload provided
       requestBody:
         content:
           application/json:
